--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(samples)
+# project(samples LANGUAGES CXX CUDA)
 cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
 
 find_library(CUDART_LIBRARY cudart ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
