--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,16 @@ cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
 
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=sm_50")
 
-message(STATUS " CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES: ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}")
-message(STATUS " CMAKE_CUDA_FLAGS: ${CMAKE_CUDA_FLAGS}")
+#if(NOT CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES)
+#	message( FATAL_ERROR "CUDA Include directories not found! Add path to this variable as an argument to cmake" )
+#endif()
+
+#if(NOT CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES)
+#	message( FATAL_ERROR "CUDA static library directories not found! Add path to this variable as an argument to cmake" )
+#endif()
+
+message(STATUS "CUDA_INCLUDE_DIRECTORIES: ${CUDA_INCLUDE_DIRECTORIES}")
+message(STATUS "CUDA_LINK_DIRECTORIES: ${CUDA_LINK_DIRECTORIES}")
 
 find_package(Boost REQUIRED) # Need to set BOOST_ROOT environment variable
 
