--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
 
-find_library(CUDART_LIBRARY cudart ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
+find_library(CUDART_LIBRARY cudart ${CUDA_LINK_DIRECTORIES})
 
 add_executable(tests
 	helpers.cpp
@@ -13,7 +13,7 @@ add_executable(tests
 	testTree.cpp
 )
 
-target_include_directories(tests PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES} "${CMAKE_CURRENT_LIST_DIR}")
+target_include_directories(tests PRIVATE ${CUDA_INCLUDE_DIRECTORIES} "${CMAKE_CURRENT_LIST_DIR}")
 
 # Link CUDA dynamic library with our native CPP executables
 # The executables depend on flavors_lib, so CMake will automatically include the same 
