--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,15 @@ project(flavors LANGUAGES CXX CUDA)
 cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
 
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=sm_50")
-
 set(CUDA_INCLUDE_DIRECTORIES "${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}" CACHE STRING "Path to CUDA include directories")
-message(STATUS "Set CUDA_INCLUDE_DIRECTORIES to: ${CUDA_INCLUDE_DIRECTORIES}")
 set(CUDA_LINK_DIRECTORIES "${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES}" CACHE STRING "Path to CUDA static libraries")
+
+message(STATUS "Set CMAKE_CUDA_FLAGS to: ${CMAKE_CUDA_FLAGS}")
+message(STATUS "Set CMAKE_C_FLAGS to: ${CMAKE_C_FLAGS}")
+message(STATUS "Set CMAKE_CXX_FLAGS to: ${CMAKE_CXX_FLAGS}")
+message(STATUS "Set CUDA_INCLUDE_DIRECTORIES to: ${CUDA_INCLUDE_DIRECTORIES}")
 message(STATUS "Set CUDA_LINK_DIRECTORIES to: ${CUDA_LINK_DIRECTORIES}")
+find_library(CUDART_LIBRARY cudart ${CUDA_LINK_DIRECTORIES})
 
 find_package(Boost REQUIRED) # Need to set BOOST_ROOT environment variable
 # Find Boost headers only
